MFH: Bug #27104 CLI/CGI SAPI module variable name conflict